# bazel-multi-arch-oci-go-image

./: BUILD.bazel  MODULE.bazel  Makefile
