bazel_dep(name = "aspect_bazel_lib", version = "2.1.0")
bazel_dep(name = "container_structure_test", version = "1.16.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_oci", version = "1.5.1")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_go", version = "0.44.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True, )
go_deps.from_file(go_mod = "//:go.mod")

use_repo(go_deps, 
    "com_github_google_go_cmp",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_base_amd_64",
    digest = "sha256:d08c10f03c27271160993f294e0eb120af71217d0cf4587c484cc5b7cb3fe5ee",
    image = "gcr.io/distroless/base",
)

oci.pull(
    name = "distroless_base_arm_64",
    digest = "sha256:71b79745bb79377e88d936fd362bf505ad9f278f6a613233f0be2f10b96b1b21",
    image = "gcr.io/distroless/base",
)

use_repo(oci, "distroless_base_amd_64", "distroless_base_arm_64")
